Fix best of 2. The wakeup bug in knote_flux. Fix work stolen knotes not being processed

--- a/tests/sys/kqueue/libkqueue/Makefile
+++ b/tests/sys/kqueue/libkqueue/Makefile
@@ -16,7 +16,9 @@ SRCS.kqtest=		\
 	proc.c		\
 	signal.c	\
 	read_m.c 	\
-	user.c
+	user.c \
+	close_m.c
+	
 WARNS?=	2
 LDADD+= -lthr
 .include <bsd.test.mk>
